...
                "Talaschin",
                "Vierblättrige Einbeere",
                "Wirselkraut"
            )
        ),
        Region(
            name = "Nördliche Grasländer und Steppen",
            landscapes = listOf(Landscape.HIGHLANDS, Landscape.STEPPE, Landscape.GRASSLANDS, Landscape.RIVER_LAKE, Landscape.RIVER_FLOODPLAINS, Landscape.FOREST, Landscape.FOREST_EDGE),
            herbs = listOf(
                "Alraune",
                "Alveranie",
                "Blutblatt",
                "Braunschlinge",
...
